--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "redux": "^4.0.5",
     "redux-firestore": "^0.11.0",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-react": "^0.88.2",
     "styled-components": "^5.0.0"
   },
   "scripts": {
