--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^7.6.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-firebase-file-uploader": "^2.4.3",
     "react-redux": "^7.1.3",
     "react-redux-firebase": "^3.0.7",
     "react-router-dom": "^5.1.2",
@@ -16,6 +17,7 @@
     "redux": "^4.0.5",
     "redux-firestore": "^0.11.0",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-react": "^0.88.2",
     "styled-components": "^5.0.0"
   },
   "scripts": {
