--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "redux": "^4.0.5",
     "redux-firestore": "^0.11.0",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-react": "^0.88.2"
+    "semantic-ui-react": "^0.88.2",
+    "spotify-web-api-js": "^0.22.1"
   },
   "scripts": {
     "start": "react-scripts start",
