--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "redux-firestore": "^0.11.0",
     "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^0.88.2",
-    "spotify-web-api-js": "^1.2.0"
+    "spotify-web-api-js": "^1.2.0",
+    "underscore": "^1.9.2"
   },
   "scripts": {
     "start": "react-scripts start",
